# naive-vpp-api-fuzzer

./: Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: main.rs
