[package]
name = "naive-vpp-api-fuzzer"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
minreq = { version = "2.3.0", features = ["https-rustls", "json-using-serde"] }
clap = "3.0.0-beta.2"
vpp-api-transport =  { git = "https://github.com/ayourtch/vpp-api-transport", branch = "main" }
